# azure_teambots

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml
azure_teambots/: service.py  version.py
azure_teambots/bots/: __init__.py  abstract.py  echo.py
azure_teams_bot/: __init__.py  conf.py  service.py  version.py
azure_teams_bot/bots/: __init__.py  abstract.py  echo.py  listener.py
docs/: requirements-dev.txt
docs/manifest/: manifest.json
examples/: test_credentials.py
templates/: .compiled
tests/: test_basic.py
