[build-system]
requires = [
    "setuptools>=74.0.0",
    "setuptools_scm[toml]>=8.0",
    "Cython==3.0.11",
    "wheel>=0.44.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure_teambots"
description = "Azure Teams Bot is a Facility for deploying MS Teams Bots."
readme = "README.md"
authors = [
    { name = "Jesus Lara G.", email = "jesuslarag@gmail.com" }
]
maintainers = [
    { name = "Jesus Lara G.", email = "jesuslarag@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "bot",
    "teams",
    "azure",
    "botframework",
    "asyncio",
    "aiohttp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "transitions>=0.9.2",
    "botbuilder-core>=4.17.0",
    "botbuilder-integration-aiohttp>=4.17.0",
    "botbuilder-schema>=4.17.0",
    "botbuilder-dialogs>=4.17.0",
    "botframework-streaming>=4.17.0",
    "msal>=1.32.0",
    "msgraph-core>=1.3.2",
    "azure-identity>=1.20.0",
    "helpers>=0.2.0",
    "navconfig>=1.7.13",
    "navigator-api>=2.13.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=5.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=2.5.0",
    "pytest-assume>=2.4.0",
    "coverage>=6.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=5.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=2.5.0",
    "pytest-assume>=2.4.0",
    "coverage>=6.0",
    "asynctest>=0.13.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/phenobarbital/azure_teambots"
Documentation = "https://github.com/phenobarbital/azure_teambots/"
Repository = "https://github.com/phenobarbital/azure_teambots.git"
"Bug Tracker" = "https://github.com/phenobarbital/azure_teambots/issues"
Funding = "https://paypal.me/phenobarbital"
"Say Thanks!" = "https://saythanks.io/to/phenobarbital"

[tool.setuptools]
packages = ["azure_teambots"]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
write_to = "azure_teambots/version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The loop argument is deprecated since Python 3\\.8, and scheduled for removal in Python 3\\.10:DeprecationWarning:asyncio",
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:.*is with a literal.*:SyntaxWarning",
    "ignore:.*function ham\\(\\) is deprecated:DeprecationWarning",
    "error",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["azure_teambots"]
known_third_party = [
    "aiohttp",
    "asyncio",
    "botbuilder",
    "botframework",
    "msal",
    "navconfig",
    "navigator-api",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "botbuilder.*",
    "botframework.*",
    "msal.*",
    "msgraph.*",
    "azure.*",
    "helpers.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 88

[tool.coverage.run]
source = ["azure_teambots"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
